--- a/Strings/nl/Resources.resw
+++ b/Strings/nl/Resources.resw
@@ -809,9 +809,6 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
   <data name="Settings_PriceLevels2.Header" xml:space="preserve">
     <value>'Dichtbij' drempelpercentage</value>
   </data>
-  <data name="HeatMapView_YAxisTitle" xml:space="preserve">
-    <value>Afstand tot Winstname-niveau [%]</value>
-  </data>
   <data name="HeatMapView.Text" xml:space="preserve">
     <value>Target Bubbels</value>
   </data>
@@ -1045,5 +1042,20 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
   </data>
   <data name="NarrativesLV_ShowOnlyAssets.Content" xml:space="preserve">
     <value>Toon alleen portefeuille</value>
+  </data>
+  <data name="HeatMapType_Target.Content" xml:space="preserve">
+    <value>Target</value>
+  </data>
+  <data name="HeatMapType_Rsi.Content" xml:space="preserve">
+    <value>dagelijkse RSI</value>
+  </data>
+  <data name="HeatMapView_Target_YAxisTitle" xml:space="preserve">
+    <value>Afstand tot target [%]</value>
+  </data>
+  <data name="HeatMapView_Rsi_YAxisTitle" xml:space="preserve">
+    <value>dagelijkse RSI</value>
+  </data>
+  <data name="HeatMap_TeachRsi.Title" xml:space="preserve">
+    <value>Nieuwe functie: dagelijkse RSI</value>
   </data>
 </root>
